--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ header {
     margin-bottom: 55px;
 }
 
+header img {
+    width: 50%;
+}
+
 header ul {
     display: flex;
 }
@@ -145,6 +149,9 @@ header ul li a:hover {
     #about p {
         max-width: 80%;
         text-align: justify;
+    }
+    header img {
+        width: 40%;
     }
     header ul {
         font-size: 16px;
